# nina-ai-backend

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  start-website.js
docs/: DEPLOY_REDIS.md  NINA_OVERVIEW.md
notes/: BUILD_LOG.md
schemas/: agent.schema.json
sdk/: README.md  nina-bootstrap.js  nina-contract.js  nina-embed.js  nina-executor.js  nina-panel.css
src/nina/: __init__.py  action_input_coalesce.py  cart_flow.py  catalog_hydrate.py  catalog_probe.py  catalog_rail.py  chat.py  connector.py  console_app.py  console_routes_auth.py  console_routes_query.py  console_routes_tools.py  console_routes_wizard.py  console_schemas.py  console_store.py  contract.py  contract_validate.py  crypto.py  fast_path.py  init.py  instructions.py  intent.py  pg_store.py  pool.py  prompt.py  redis_store.py  responder.py  session.py  skill_loader.py  skill_runtime.py  skill_synth.py  static_site_probe.py  store_util.py  validate_cli.py
src/nina/console_static/: dashboard.html  index.html
src/nina/generator/: heal.py  pipeline.py
src/nina/generator/stages/: assemble.py  crawler.py  dom_extract.py
src/nina/scanner/: cli.py  detector.py  verifier.py
src/nina/scanner/scanners/: nestjs_scanner.py
src/nina/sdk/: nina-bootstrap.js
src/nina/skills/: SKILLS_FORMAT.md  cart.md  checkout.md  navigation.md  order_tracking.md  product_detail.md  remove_from_cart.md  search.md  support.md  view_cart.md
tests/: test_action_input_coalesce.py  test_cart_flow.py  test_cart_from_search_instructions.py  test_cart_search_fast_path.py  test_catalog_hydrate.py  test_catalog_probe_firestore.py  test_catalog_rail.py  test_checkout_auth_flow.py  test_contract_risk_enforcement.py  test_generator.py  test_grounded_search_instructions.py  test_product_reference.py  test_redis_store.py  test_reference_resolution.py  test_skill_runtime.py  test_skill_synth.py  test_skills.py  test_store_protocol.py
