[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nina-sdk"
version = "1.0.0"
description = "NINA — conversational action layer for any system"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Orbit Group" }]
keywords = ["ai", "agents", "voice", "sdk", "actions", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=42.0",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "typing_extensions>=4.6; python_version < '3.11'",
]

[project.scripts]
nina = "nina.cli:main"
nina-generate = "nina.generator.cli:main"
nina-validate = "nina.validate_cli:main"
nina-console = "nina.console_app:main"
nina-probe-openapi = "nina.openapi_probe:main"
nina-dev = "nina.dev_launcher:main"
nina-scan = "nina.scanner.cli:main"

[project.optional-dependencies]
deepgram = ["websockets>=12.0"]
elevenlabs = ["httpx>=0.27"]
whisper = ["httpx>=0.27"]
voice = ["websockets>=12.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "fastapi>=0.110", "uvicorn>=0.27"]
e2e = ["pytest>=8.0", "playwright>=1.40"]
generator = ["playwright>=1.40"]
postgres = ["psycopg2-binary>=2.9"]
redis = ["redis>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nina"]
include = ["src/nina/py.typed", "schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["examples/ecommerce-fastapi", "src"]
markers = [
    "e2e: Playwright end-to-end tests (optional, requires browser)",
]
